@@ -2,8 +2,8 @@
   domapp - IceCube DOM Application program for use with 
            "Real"/"domapp" FPGA
            J. Jacobsen (jacobsen@npxdesigns.com), Chuck McParland
-  $Date: 2005-12-16 20:02:47 $
-  $Revision: 1.34 $
+  $Date: 2005-12-23 21:08:42 $
+  $Revision: 1.35 $
 */
 
 #include <unistd.h> /* Needed for read/write */
@@ -27,8 +27,8 @@
 #define MIN_HW_IVAL (FPGA_HAL_TICKS_PER_SEC+100)
 
 /* routines to handle send and receive of messages through stdin/out */
-int getmsg(char *);
-void putmsg(char *);
+int getmsg(char * halmsg, char * message);
+void putmsg(char * message);
 
 /* packet driver counters, etc. For compatibility purposes only */
 ULONG PKTrecv;
@@ -113,7 +113,7 @@ int main(void) {
     }
 
     /* Check for new message */
-    if((halmsg_remain || hal_FPGA_msg_ready()) && getmsg(message)) {
+    if(getmsg(halmsg, message)) {
       msgHandler((MESSAGE_STRUCT *) message);
       putmsg(message);
     }
@@ -130,43 +130,71 @@ void putmsg(char *buf) {
 static int receive(char *b) {
   int nr, type;
   hal_FPGA_receive(&type, &nr, b);
-  return nr;
+  return (nr > 0)? nr : 0;
 }
 
-int getmsg(char *buf) {
-  // If needed, get full HW packet - don't use read()
+int getmsg(char *halmsg,    /* HAL message buffer updated as needed */
+	   char *msgbuf) {  /* Message data to fill; both buffers >= MAX_TOTAL_MESSAGE */
+  static int halmsg_remain = 0; /* Remaining unparsed data already read from HAL */
+  static int ipos          = 0; /* Position in current domapp msg buffer */
+  static int haloff        = 0; /* Position in current HAL msg buffer */
+  /* Try to fill data from HAL to build message.
+     Return true if message successfully built.  Otherwise, retry.
+     Assumes most msg reads from HAL are domapp-message-aligned,
+     so that in case of corrupted message buffer, we can just toss
+     HAL message data until an intact packet arrives. */
 
-  if(!halmsg_remain) {
+  /* Wait for data to parse */
+  if(! halmsg_remain) {
+    if(!hal_FPGA_msg_ready()) return 0;
     halmsg_remain = receive(halmsg);
+    if(! halmsg_remain) return 0;
+    haloff = 0;
   }
-  
-  if(halmsg_remain < MSG_HDR_LEN) {
-    mprintf("getmsg: short read of header! (only %d bytes available)", halmsg_remain);
-    halmsg_remain = 0;
-    return 0;
-  }
-  
-  memcpy(buf, halmsg, MSG_HDR_LEN);
-  halmsg_remain -= MSG_HDR_LEN;
 
-  int len = Message_dataLen((MESSAGE_STRUCT *) buf);
-  if(len > MAXDATA_VALUE) {
+  /* Wait for header */
+  int needed = MSG_HDR_LEN-ipos;
+  if(needed > 0) {
+    int tocopy = (halmsg_remain > needed) ? needed : halmsg_remain;
+    memcpy(msgbuf+ipos, halmsg+haloff, tocopy);
+    ipos += tocopy;
+    halmsg_remain -= tocopy;
+    haloff += tocopy;
+  }
+  
+  if(ipos < MSG_HDR_LEN) return 0; /* No header yet -- can't proceed until more data */
+
+  int len = Message_dataLen((MESSAGE_STRUCT *) msgbuf);
+
+  if(len < 0 || len > MAXDATA_VALUE) { /* Toss corrupt message */
     mprintf("getmsg: data length (%d) too long!", len);
     halmsg_remain = 0;
+    ipos = 0;
+    haloff = 0;
     return 0;
   }
-  
-  if(len == 0) return 1;
-  
-  if(halmsg_remain < len) {
-    mprintf("getmsg: short read of %d bytes! (only %d bytes remain)!", len, halmsg_remain);
-    halmsg_remain = 0;
-    return 0;
-  }
-  
-  memcpy(buf+MSG_HDR_LEN, halmsg+MSG_HDR_LEN, len);
-  halmsg_remain -= len;
-  
-  return 1;
-}
 
+  if(len == 0) {
+    ipos = 0;
+    return 1;
+  }
+
+  /* Do same thing for message payload we did for header */
+  if(! halmsg_remain) return 0; 
+  needed = len + MSG_HDR_LEN - ipos; /* Number of bytes needed past header */
+  if(needed > 0) {
+    int tocopy = (halmsg_remain > needed) ? needed : halmsg_remain;
+    memcpy(msgbuf+ipos, halmsg+haloff, tocopy);
+    ipos += tocopy;
+    halmsg_remain -= tocopy;
+    haloff += tocopy;
+  }
+
+  if(ipos >= MSG_HDR_LEN + len) { /* Don't need '>' but be safe */
+    ipos = 0;
+    return 1;
+  } else {
+    return 0;
+  }
+}
+ 
